# NumberRecognition

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py  test.py  ui2py.sh
MNIST_data/: minst.py  mnist.py
documentation/: Käyttöohje.md  devohje.md  määrittelydokumentti.md  pakkauskaavio.dia  qt_designer.md  testausdokumentti.md  toteutusdokumentti.md
documentation/viikkoraportti/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: main.py  main_no_gui.py  main_tui.py  main_window_ui.py  test.py
src/repositories/: mnist.py  mnist_data_repository.py
src/repository/: mnist.py  mnist_data_repository.py
src/services/: knn.py  knnD22.py
src/test/: mnist_test.py
src/tests/repositories/: mnist_data_repository_test copy.py  mnist_data_repository_test.py  mnist_test.py
src/tests/services/: knn_test.py
src/ui/: main_window.py  main_window.ui  mnist_knn_gui.py  mnist_pic_widget.py  paintboard_widget.py  ui.py  ui2py.sh
