[tool.poetry]
name = "recognition_of_handwritten_numbers"
version = "0.1.0"
description = ""
authors = ["JY Fang <junyuan.fang@helsinki.fi>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.4.3"
numpy = "^1.21.4"
PyQt5 = "^5.15.6"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
